Make demo portable (JavaFX from Maven repository, stateless Database): - build.gradle.kts:  * Set OpenjJFX plugin version to 0.0.14, Spring Boot plugin to 3.4.5.  * Replace local --module-path with Maven JavaFX 21.0.6 artifacts.  * SET application {mainClass = Lineage2CalculatorGUI.MainFX} as main class for launching application.  * Drop explicit javafx-graphics & javafx-base.  * Inherit Spring-Boot starter version from BOM.  * Add JVM flag --add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED only to JavaExec task (needed by ControlsFX).
- docker-compose.yml:
 * Removed named volume, now database restets on every 'up'.
 * Mount L2_towns_dump.sql for basic DB seed.

Now 'docker compose up' + './gradlew run' should works on any OS with JDK 17+ and Docker.