@@ -1,16 +1,10 @@
-import org.springframework.boot.gradle.tasks.bundling.BootJar
-
 plugins {
     id("java")
     id("application")
 
-    id("org.springframework.boot") version "3.4.2"
+    id("org.springframework.boot") version "3.4.5"
     id("io.spring.dependency-management") version "1.1.7"
-    id("org.openjfx.javafxplugin") version "0.0.10"
-}
-
-tasks.named<BootJar>("bootJar") {
-    archiveFileName.set("L2_Calculator.jar")
+    id("org.openjfx.javafxplugin") version "0.0.14"
 }
 
 group = "org.example"
@@ -24,17 +18,14 @@ dependencies {
 
     // Main dependencies for JavaFX
     implementation("org.openjfx:javafx-controls:21.0.6")
-    implementation("org.openjfx:javafx-graphics:21.0.6")
     implementation("org.openjfx:javafx-fxml:21.0.6")
-    implementation("org.openjfx:javafx-base:21.0.6")
-
     // ControlsFX library for additional UI controls.
     implementation("org.controlsfx:controlsfx:11.2.2")
 
 
     // Starter for Spring Boot.
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.4.2")
-    implementation("org.springframework.boot:spring-boot-starter-web:3.4.2")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.springframework.boot:spring-boot-starter-web")
 
     // Driver for PostgresSQL.
     implementation ("org.postgresql:postgresql:42.7.5")
@@ -58,21 +49,21 @@ javafx {
     modules = listOf("javafx.controls", "javafx.fxml")
 }
 
-tasks.test {
-    useJUnitPlatform()
+application {
+    mainClass.set("Lineage2CalculatorGUI.MainFX")
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs(
+        "-Xmx1024m", "-Xms512m",
+        "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
+    )
 }
 
 tasks.withType<JavaCompile> {
     options.compilerArgs.add("-Xlint:unchecked")
 }
 
-tasks.withType<JavaExec> {
-    jvmArgs = listOf(
-        "-Xmx1024m", "-Xms512m",
-        "--module-path", "F:/JavaFX/lib",
-        "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics",
-        "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
-    )
+tasks.test {
+    useJUnitPlatform()
 }
-
-
